<resources>
    <string name="app_name">Crypto App</string>
    <string name="symbols_template">%s / %s</string>
    <string name="last_update_template">Час останнього оновлення: %s</string>
    <string name="slash">/</string>
    <string name="price_label">Ціна:</string>
    <string name="min_price">Мінімум за день:</string>
    <string name="max_price">Максимум за день:</string>
    <string name="last_trade">Остання торгівля:</string>
    <string name="last_update">Оновленно</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>